# cpr_common_core

./: README.md
cpr_common_core_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
cpr_common_core_msgs/msg/: Lights.msg  Power.msg  Status.msg  StopStatus.msg
