<?xml version="1.0"?>
<package format="2">
  <name>cpr_common_core_msgs</name>
  <version>0.1.0</version>
  <description>cpr_common_core_msgs</description>
  <author email="tbaltovski@clearpathrobotics.com">Tony Baltovski</author>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
